tests/valid/edge_cases/zero_params.fig
// Edge case: function with zero parameters
func no_params() -> ok
    pass

func no_params_no_return()
    pass
