tests/invalid/syntax/requires_on_function.fig
// Invalid: Requires clause on non-struct type
func test() -> ok
    requires T: Clone
    pass
